ielm com formulas e outros

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1300,3 +1300,68 @@ year = {2006}
   pages =       "48--55",
   \URL =         "http://doi.acm.org/10.1145/2408736.2408746",
 }
+
+@article{brazdil1994analysis,
+  title={Analysis of results},
+  author={Brazdil, PB and Henery, RJ},
+  journal={Machine learning, neural and statistical classification},
+  pages={175--212},
+  year={1994},
+  publisher={Ellis Horwood, New York}
+}
+
+@Article{journals/air/VilaltaD02,
+  title =       "A Perspective View and Survey of Meta-Learning",
+  author =      "Ricardo Vilalta and Youssef Drissi",
+  journal =     "Artif. Intell. Rev",
+  year =        "2002",
+  number =      "2",
+  volume =      "18",
+  bibdate =     "2011-05-19",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/air/air18.html#VilaltaD02",
+  pages =       "77--95",
+  \URL =         "http://dx.doi.org/10.1023/A:1019956318069",
+}
+
+@Article{journals/nn/Wolpert92,
+  title =       "Stacked generalization",
+  author =      "David H. Wolpert",
+  journal =     "Neural Networks",
+  year =        "1992",
+  number =      "2",
+  volume =      "5",
+  bibdate =     "2005-12-15",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/nn/nn5.html#Wolpert92",
+  pages =       "241--259",
+  URL =         "http://dx.doi.org/10.1016/S0893-6080(05)80023-1",
+}
+
+@inproceedings{pfahringer2000tell,
+  title={Tell me who can learn you and i can tell you who you are: Landmarking various learning algorithms},
+  author={Pfahringer, Bernhard and Bensusan, Hilan and Giraud-Carrier, Christophe},
+  booktitle={Proceedings of the Seventeenth International Conference on Machine Learning (ICML2000)},
+  pages={743--750},
+  year={2000}
+}
+
+@InProceedings{conf/ilp/BensusanGK00,
+  title =       "A Higher-order Approach to Meta-learning",
+  author =      "Hilan Bensusan and Christophe G. Giraud-Carrier and
+                 Claire J. Kennedy",
+  bibdate =     "2005-02-28",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/ilp/ilp2000wip.html#BensusanGK00",
+  booktitle =   "ILP Work-in-progress reports",
+  booktitle =   "Inductive Logic Programming, 10th International
+                 Conference, {ILP} 2000, Work-in-progress reports,
+                 London, {UK}, July 2000, Proceedings",
+  publisher =   "CEUR-WS.org",
+  year =        "2000",
+  volume =      "35",
+  editor =      "James Cussens and Alan M. Frisch",
+  series =      "CEUR Workshop Proceedings",
+  \URL =         "http://SunSITE.Informatik.RWTH-Aachen.DE/Publications/CEUR-WS/Vol-35/03-BensuanGiraud-CarrierKennedy.ps",
+}
+
