--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -1,4 +1,6 @@
 \chapter{Aprendizado Meta-ativo}\label{aml}
+\tar{LOO é usado; então para ter confiança est. pode-se adotar o teste de McNemar}
+
 \tar{rodei meta multirrotulo pra vários metaclassif:
 c45=0.50 Maj=0.46}
 
