--- a/experimentos.tex
+++ b/experimentos.tex
@@ -1,8 +1,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Experimentos e Resultados}\label{experimentos}
 
-\ano{para selecionar das variantes da literatura apenas as melhores fazer mini friedman
-para: unc,ent,mar,eer,dwtus}
+\cite{brazdil1994analysis} faz tabela de distâncias pareadas com taxas de erro sendo
+as dimensões, depois faz decomposição ortogonal para visualizar em duas dimensões.
+Depois faz agrupamento hierárquico.
+
+\esb{distEntrePassivas.scala deve usar kappa? deve ser normalizado?}
+
+\ano{selecionar das variantes da literatura fazendo mini friedman
+para cada tipo: unc,ent,mar  eer   dwtus ou usar centroide por distEntrePassivas?}
 
 x Qual a economia proporcionada por uma estratégia?
 
