--- a/meta.tex
+++ b/meta.tex
@@ -3,16 +3,76 @@ Um sistema de classificação baseado em aprendizado de máquina depende
 de um modelo que é induzido por algoritmos de aprendizado.
 \ano{citar seção/cap de contexto?}
 Diante da infinidade de vieses possíveis de aprendizado,
-muitos algoritmos têm sido propostos e são frequentemente
+muitos algoritmos têm sido propostos e alguns são frequentemente
 empregados de forma generalizada na solução dos mais diversos problemas,
-como é o caso das redes neurais \citep{haykin2004comprehensive}.
-Entretanto,
-\cite{conf/icml/Schaffer94} provou formalmente que
-um desempenho positivo em algumas situações de aprendizado
+como é o caso das redes neurais artificiais \citep{haykin2004comprehensive}.
+Entretanto, nenhum algoritmo pode ser adequado a todos os domínios,
+pois um desempenho positivo em algumas situações de aprendizado
 precisa ser compensado por um igual grau de desempenho negativo
-em outras.
+em outras \citep{conf/icml/Schaffer94}.
+Dessa forma, um sistema de aprendizado de máquina requer
+uma escolha criteriosa de qual algoritmo deva ser empregado.
 % \cite{wolpert1996lack},
+Normalmente, o problema da escolha do algoritmo é resolvido
+por um especialista em aprendizado de máquina que se baseia em conhecimentos
+sobre os dados e sobre os algoritmos disponíveis
+para escolher manualmente o melhor segundo alguma métrica de desempenho
+\cite{books/daglib/0022052}.
+Uma maneira de se evitar a escolha manual é a adoção de algum tipo
+de \textit{meta-aprendizado}, que é o estudo do aperfeiçoamento dos
+algoritmos de aprendizado por meio da experiência.
+Esse aperfeiçoamento se dá no nível \textit{meta},
+que é um nível acima do aprendizado convencional chamado nível \textit{base}
+\citep{journals/air/VilaltaD02}.
+No nível base, o viés de aprendizado é fixo, enquanto que
+no nível meta o viés normalmente é escolhido dinamicamente.
 
-\citep{books/daglib/0022052}
+Diferentes formas de meta-aprendizado são apresentadas nas seções seguintes.
 
+\subsection{Generalização em pilha}
+Na \ing{generalização em pilha}{stacked generalization}
+\citep{journals/nn/Wolpert92} o meta-aprendiz lida com uma metabase
+que consiste de um conjunto de treinamento transformado por
+aprendizes no nível base.
+Uma particularidade dessa abordagem é o viés estático,
+pois ocorre uma combinação de algoritmos ao invés de uma seleção.
+O resultado dessa transformação são metaexemplos cujos valores dos atributos
+são as predições de cada modelo base.
+% kalousis2002algorithm
+
+\subsection{Marcadores de referência}
+Os \ing{marcadores de referência}{landmarkers} \citep{pfahringer2000tell}
+são um conjunto diverso de algoritmos simples usados como referência para
+algoritmos mais complexos.
+A acurácia de cada um dos modelos associados fornece o valor de um meta-atributo.
+
+\subsection{Caracterização por modelos}
+A própria estrutura dos modelos do nível base pode ser explorada na construção dos
+metaexemplos.
+Uma representante da \textit{caracterização por modelos} é a
+\ing{indução de modelos tipados de ordem maior}{typed higher-order induction}
+\citep{conf/ilp/BensusanGK00}.
+Ela gera - no exemplo dado no trabalho original - uma árvore de decisão para cada
+base de dados.
+As árvores são completamente representadas por estruturas complexas
+que servem de metaexemplos que são aprendidos por algoritmos especialmente
+desenvolvidos para esse tipo de tarefa.
+
+\subsection{Caracterização direta}
+
+\ano{entrar em mais detalhes, pois é o caso adotado/adotável}
+
+\cite{brazdil1994analysis} é a ref do statlog;
+
+
+\ano{definir ML explicitamente?}
+Um sistema de recomendação baseado em meta-aprendizado
+tem a função de sugerir o algoritmo e parâmetros mais apropriados,
+ou um ranqueamento das opções disponíveis,
+para uma determinada base de dados.
+
+Critério de empate:
+Um algoritmo é considerado adequado se ele não for
+pior que o melhor de todos com significância estatística
+\cite{books/daglib/0022052}.
 
