--- a/resumo.tex
+++ b/resumo.tex
@@ -1,4 +1,6 @@
 \chapter*{Resumo}
+\ano{arrumar vírgulas e pontos nos números}
+
 \tar{possível novo título:}
 
 \tar{Viabilidade do aprendizado de máquina ativo em vista da diversidade de
