--- a/tese.tex
+++ b/tese.tex
@@ -180,8 +180,10 @@
 \usepackage{doi}
 \usepackage{pbox}
 \usepackage{amsfonts}
+\usepackage{icomma}
 
 \begin{document}
+\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \pagestyle{empty}
 \pagenumbering{roman}
 \newcommand{\titulo}{\meutitulo}
