results bem iniciado

--- a/apendice2.tex
+++ b/apendice2.tex
@@ -1,2 +1,10 @@
-\chapter{Resultados Detalhados}\label{resultados}
-\section{Tabelas}
+\chapter{Resultados Detalhados}\label{detalhes}
+Neste apêndice são apresentados detalhes adicionais dos experimentos reportados
+nos capítulos \ref{experimentos} e \ref{aml}.
+\section{Diversidade dos classificadores adotados}
+Os valores de acurácia empregados na comparação de algoritmos de aprendizado
+exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0},
+\ref{tab:balaccClassif1} e \ref{tab:balaccClassif2}.
+
+\input classifsTab
+
