--- a/contexto.tex
+++ b/contexto.tex
@@ -8,7 +8,7 @@ ainda resta um vasto espectro de novas habilidades adquiríveis
 sem que seja necessária uma programação prévia.
 Dois exemplos desse espectro são a alfabetização e
 o reconhecimento de novos objetos.
-Tratam-se de habilidades aprendidas por humanos em que é difícil
+Trata-se de habilidades aprendidas por humanos em que é difícil
 identificar os algoritmos nos quais se baseiam.
 A identificação da categoria de determinado objeto de interesse
 é parte importante das potencialidades
