--- a/tese.tex
+++ b/tese.tex
@@ -182,6 +182,10 @@
 \usepackage{amsfonts}
 \usepackage{icomma}
 
+\usepackage{pdflscape}
+\usepackage{afterpage}
+\usepackage{capt-of}
+
 \begin{document}
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \pagestyle{empty}
